--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         
         // Firebase configuration (Replace with your own Firebase config)
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
+            apiKey: "AIzaSyBL4uYhJqa3HPf1Cq7mV0l2023xIAZCUIY",
+            authDomain: "bigcat-464fe.firebaseapp.com",
+            projectId: "bigcat-464fe",
+            storageBucket: "bigcat-464fe.firebasestorage.app",
+            messagingSenderId: "117805989159",
+            appId: "1:117805989159:web:38d30263cd7a95e1b7bd02"
         };
         
         // Initialize Firebase
