--- a/admin-login.html
+++ b/admin-login.html
@@ -1,10 +1,11 @@
-<!-- Admin Login Page -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Login</title>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
     <style>
         body { text-align: center; font-family: Arial, sans-serif; }
         .container { margin: auto; max-width: 400px; padding: 20px; background: white; border-radius: 8px; box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); }
@@ -14,18 +15,35 @@
 <body>
     <div class="container">
         <h2>Admin Login</h2>
+        <input type="email" id="adminEmail" placeholder="Enter Email" required>
         <input type="password" id="adminPass" placeholder="Enter Password" required>
         <button onclick="checkLogin()">Login</button>
     </div>
     <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyBL4uYhJqa3HPf1Cq7mV0l2023xIAZCUIY",
+            authDomain: "bigcat-464fe.firebaseapp.com",
+            projectId: "bigcat-464fe",
+            storageBucket: "bigcat-464fe.firebasestorage.app",
+            messagingSenderId: "117805989159",
+            appId: "1:117805989159:web:38d30263cd7a95e1b7bd02"
+        };
+
+        firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
+
         function checkLogin() {
+            let email = document.getElementById("adminEmail").value;
             let password = document.getElementById("adminPass").value;
-            if (password === "hedonegoofed") {
-                localStorage.setItem("adminLoggedIn", "true");
-                window.location.href = "admin.html";
-            } else {
-                alert("Incorrect password!");
-            }
+            
+            auth.signInWithEmailAndPassword(email, password)
+                .then(() => {
+                    localStorage.setItem("adminLoggedIn", "true");
+                    window.location.href = "admin.html";
+                })
+                .catch((error) => {
+                    alert("Login failed: " + error.message);
+                });
         }
     </script>
 </body>
