Update submit.html script

--- a/submit.html
+++ b/submit.html
@@ -11,6 +11,7 @@
         .button { display: inline-block; text-decoration: none; color: white; background: #333; padding: 10px 20px; border-radius: 5px; margin: 10px; cursor: pointer; }
         .input-field { width: 80%; padding: 10px; margin: 10px 0; border: 1px solid #ddd; border-radius: 5px; }
     </style>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js"></script>
     <script type="module">
         // Import Firebase SDK
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
