Update admin.html script

--- a/admin.html
+++ b/admin.html
@@ -10,6 +10,7 @@
         .submission { border-bottom: 1px solid #ddd; padding: 10px; margin-bottom: 10px; }
         input, textarea, button { width: 90%; padding: 10px; margin: 5px; }
     </style>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js"></script>
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
         import { getFirestore, collection, getDocs, addDoc, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
