--- a/history.html
+++ b/history.html
@@ -10,6 +10,7 @@
         h1 { color: #b30000; }
         .history-entry { border-bottom: 1px solid #ddd; padding: 10px; margin-bottom: 10px; }
     </style>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js"></script>
     <script type="module">
         // Import Firebase SDK
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
